2004-12-04  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* plugins/gedit/seahorse-gedit.c:
	* src/main.c:
	* src/seahorse-add-subkey.c:
	* src/seahorse-add-uid.c:
	* src/seahorse-delete.c:
	* src/seahorse-generate-adv.c:
	* src/seahorse-generate-druid.c:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-properties.c:
	* src/seahorse-keyserver-results.c:
	* src/seahorse-revoke.c:
	* src/seahorse-sign.c: Rename error handling functions to better 
	indicate their usage
	* libseahorse/Makefile.am:
	* libseahorse/seahorse-gpgmex.h:
	* libseahorse/seahorse-key-source.c:
	* libseahorse/seahorse-key-source.h:
	* libseahorse/seahorse-ldap-source.c:
	* libseahorse/seahorse-ldap-source.h:
	* libseahorse/seahorse-multi-source.c:
	* libseahorse/seahorse-op.c:
	* libseahorse/seahorse-op.h:
	* libseahorse/seahorse-operation.c:
	* libseahorse/seahorse-operation.h:
	* libseahorse/seahorse-pgp-source.c:
	* libseahorse/seahorse-server-source.c:
	* libseahorse/seahorse-server-source.h:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* src/seahorse-key-properties.c:
	* src/seahorse-keyserver-results.c:
	* src/seahorse-keyserver-search.c:
	* configure.in: Added LDAP keyserver support. Reworked key server code.
	(bug# 157818)
	* libseahorse/seahorse-gpgmex-keyserver.c:
	* libseahorse/seahorse-keyserver-op.c:
	* libseahorse/seahorse-keyserver-op.h: Removed GPG keyserver support
	(bug# 157818)
	
2004-12-02	Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-op.c: 
	* libseahorse/seahorse-op.h:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* src/main.c: Prompt before overwriting files (bug# 159972)
	* libseahorse/seahorse-op.c: More efficient operations on large files
	(bug# 159083)
	
2004-11-29  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-server-source.c: Added NULL pointer checks
	* libseahorse/seahorse-recipients.glade: Fixed Recipients dialog focus issues