@@ -1,3 +1,10 @@
+2004-12-06  Nate Nielsen <nielsen@memberwebs.com>
+
+	* libseahorse/seahorse-util.c:
+	* libseahorse/seahorse-util.h:
+	* src/seahorse-key-manager.c: Rework the File Chooser code and consolidate
+	into seahorse_util_* functions
+	
 2004-12-04  Nate Nielsen <nielsen@memberwebs.com>
 
 	* libseahorse/seahorse-util.c:
